package NYT.NCellMasterClient.NProto;

import "yt_proto/yt/core/misc/proto/guid.proto";

////////////////////////////////////////////////////////////////////////////////

message TServiceDiscoveryEndpointsConfig
{
    optional string cluster = 1;
    repeated string clusters = 2;
    required string endpoint_set_id = 3;
    required int64 update_period = 4;
}

// This is union of master connection config and master roles for compatibility with old masters.
message TCellDirectoryItem
{
    repeated uint32 roles = 2; // EMasterCellRole(s)

    required int64 rpc_timeout = 4;

    // TPeerConnectionConfig
    required NYT.NProto.TGuid cell_id = 1;
    required bool ignore_peer_state = 5;

    // TBalancingChannelConfig
    repeated string addresses = 3;
    required bool disable_balancing_on_single_address = 6;
    required TServiceDiscoveryEndpointsConfig endpoints = 7;
    optional int64 hedging_delay = 8;
    required bool cancel_primary_request_on_hedging = 9;

    // TDynamicChannelPoolConfig
    required int64 max_concurrent_discover_requests = 10;
    required int64 random_peer_eviction_period = 11;
    required bool enable_peer_polling = 12;
    required int64 peer_polling_period = 13;
    required int64 peer_polling_period_splay = 14;
    required int64 peer_polling_request_timeout = 15;
    required int64 discovery_session_timeout = 16;

    // TViablePeerRegistryConfig
    required int64 max_peer_count = 17;
    required int64 hashes_per_peer = 18;
    required uint32 peer_priority_strategy = 19; // EPeerPriorityStrategy
    required int64 min_peer_count_for_priority_awareness = 20;
    required bool enable_power_of_two_choices_strategy = 21;

    // TBalancingChannelConfigBase
    required int64 discover_timeout = 22;
    required int64 acknowledgement_timeout = 23;
    required int64 rediscover_period = 24;
    required int64 rediscover_splay = 25;
    required int64 hard_backoff_time = 26;
    required int64 soft_backoff_time = 27;
        
    // TRetryingChannelConfig
    required int64 retry_backoff_time = 28;
    required int64 retry_attempts = 29;
    optional int64 retry_timeout = 30;
}

message TCellDirectory
{
    repeated TCellDirectoryItem items = 1;
}

////////////////////////////////////////////////////////////////////////////////
