package NYT.NBus.NProto;

import "yt_proto/yt/core/misc/proto/guid.proto";

message THandshake
{
    required NYT.NProto.TGuid foreign_connection_id = 1;

    // Only passed from client to server.
    optional int32 multiplexing_band = 2; // EMultiplexingBand

    optional int32 encryption_mode = 3; // EEncryptionMode
}
